--- a/style.css
+++ b/style.css
@@ -6,4 +6,8 @@ button {
 
 .content {
     display: flex;
+    flex-direction: column;
+    align-items: center;
+    border: 5px solid #000000;
+    background-color: #a6a0a0;
 }
