Make right a flexbox to allow it to be in the right column of buttons

--- a/style.css
+++ b/style.css
@@ -31,6 +31,12 @@ button {
     flex-wrap: wrap;
 }
 
+.right {
+    display: flex;
+    width: 25%;
+    flex-direction: column;
+}
+
 .plus {
     height: 100px;
 }
