Add style to larger buttons so that they look correct

--- a/style.css
+++ b/style.css
@@ -37,6 +37,14 @@ button {
     flex-direction: column;
 }
 
-.plus {
+.rightRow {
+    width: 100%;
+}
+
+.plus, .equals {
     height: 100px;
+}
+
+.zero {
+    width: 66%
 }
