--- a/style.css
+++ b/style.css
@@ -1,29 +1,34 @@
 body {
     display: flex;
     justify-content: center;
+    background-color: #000000;
 }
 
 button {
-    height: 50px;
+    height: 75px;
     width: 33.3%;
-    font-size: 20px;
+    font-size: 25px;
+    border-radius: 50%;
 }
 
 .content {
     display: flex;
     flex-direction: column;
     align-items: center;
-    border: 3px solid #000000;
-    background-color: #a6a0a0;
+    border: 3px solid #FFFFFF;
+    background-color: rgba(0,0,0,255);
     width: 300px;
 }
 
 .display {
     font-size: 60px;
-    background-color: #ffffff;
+    background-color: #000000;
     width: 300px;
-    height: 69px;
+    height: 60px;
     text-align: right;
+    margin-bottom: 10px;
+    color: #ffffff
+
 }
 
 .buttons {
@@ -49,5 +54,21 @@ button {
 }
 
 .zero {
-    width: 66.6%
+    width: 66.6%;
+    border-radius: 25%;
+}
+
+.operator {
+    background-color: rgba(246,153,6,255);
+    color: rgba(245,246,245,255);
+}
+
+.extra {
+    background-color: rgba(159,159,159,255);
+    color: rgba(0,0,0,255)
+}
+
+.number {
+    color: rgba(247,247,247,255);
+    background-color: rgba(49,49,49,255);
 }
