--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ body {
     display: flex;
     justify-content: center;
     background-color: #000000;
+    font-family: Helvetica, sans-serif;
 }
 
 button {
