--- a/style.css
+++ b/style.css
@@ -3,6 +3,9 @@ body {
     justify-content: center;
     background-color: #000000;
     font-family: Helvetica, sans-serif;
+    flex-direction: column;
+    align-items: center;
+    padding: 20px
 }
 
 button {
@@ -64,7 +67,7 @@ button {
     color: rgba(245,246,245,255);
 }
 
-.extra {
+.extra, .header, .footer {
     background-color: rgba(159,159,159,255);
     color: rgba(0,0,0,255)
 }
@@ -72,4 +75,22 @@ button {
 .number {
     color: rgba(247,247,247,255);
     background-color: rgba(49,49,49,255);
+}
+
+.header {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 150px;
+    width: 100%;
+    margin-bottom: 50px;
+}
+
+.footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 75px;
+    width: 100%;
+    margin-top: 200px;
 }
